# led-orchestra

./: .gitignore  CLAUDE.md  README.md
.cursor/rules/: console-commands.mdc
controller/: Cargo.toml
controller/src/: main.rs
docs/: architecture.md  console.md  controller-topology-adr.md  controller-topology-validation.md  debugging-journal.md  led-node-flash-sizing-decision.md  led-strip-power-bringup.md  matter-thread.md  mesh-network.md  protocol.md  requirements.md  roadmap.md
docs/checkpoints/: 2026-06-09-stage-b-split-known-good.md  2026-06-30-led-bench-commissioning-checkpoint.md
firmware/: .env.example  Cargo.toml  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs  node_config.rs
matter-prototype/: README.md
matter-prototype/cluster/: led-orchestra.md
matter-prototype/common/: led_orchestra_matter.h
matter-prototype/controller-node/: .gitignore  CMakeLists.txt  README.md  partitions-8mb.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.example  sdkconfig.ota-provider.defaults
matter-prototype/controller-node/components/lo_ota_provider/: CMakeLists.txt
matter-prototype/controller-node/components/lo_ota_provider/include/: esp_matter_ota_local_candidate.h  esp_matter_ota_provider.h
matter-prototype/controller-node/components/lo_ota_provider/src/: esp_matter_ota_bdx_sender.cpp  esp_matter_ota_candidates.cpp  esp_matter_ota_provider.cpp
matter-prototype/controller-node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  controller_wifi_ingress.cpp  controller_wifi_ingress.h  esp_ot_config.h  idf_component.yml  led_orchestra_console.cpp  led_orchestra_console.h  led_orchestra_ota_provider.cpp  led_orchestra_ota_provider.h  matter_project_config.h
matter-prototype/led-node/: CMakeLists.txt  README.md  partitions-8mb.csv  partitions.csv  sdkconfig.4mb.defaults  sdkconfig.codex-node8.defaults  sdkconfig.codex-node9.defaults  sdkconfig.defaults  sdkconfig.ota-v2.defaults
matter-prototype/led-node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml  led_color.h  led_orchestra_cluster.cpp  led_orchestra_cluster.h  led_orchestra_config_store.cpp  led_orchestra_config_store.h  led_orchestra_effects.cpp  led_orchestra_effects.h  led_orchestra_renderer.cpp  led_orchestra_renderer.h  matter_project_config.h  openthread_config.h
matter-prototype/s3-h2-hub-validation/: .gitignore  README.md  build-s3-hub.sh  lo-ota-image-server.py  lo-provision-group-member  phase-5-6-7-bench-runbook.md  phase-7-offline-ota.md  sdkconfig.controller-node.s3-otbr.defaults  sdkconfig.s3-br-direct-rcp.defaults  sdkconfig.s3-br-host.defaults  sdkconfig.s3-otbr-controller.defaults  stage-a-inventory.md  stage-b-br-baseline.md  stage-c-onehub.md  stage-d-recovery.md  stage-e-scale-soak.md  stage-f-ingress.md
matter-prototype/s3-h2-hub-validation/thread_border_router_otcli/: CMakeLists.txt
matter-prototype/s3-h2-hub-validation/thread_border_router_otcli/main/: app_main.cpp
matter-prototype/stage0-br-validation/: .gitignore  README.md  rebuild-sidepins.sh  sdkconfig.br-host-wifi.defaults  sdkconfig.br-host.defaults  sdkconfig.client.defaults  sdkconfig.rcp-sidepins.defaults  sdkconfig.rcp.defaults
matter-prototype/stage0-br-validation/tools/: sercap.py  serlog.py
shared/: Cargo.toml
shared/src/: config.rs  effect.rs  lib.rs  protocol.rs  registry.rs  rgb.rs
shared/src/effects/: mod.rs  off.rs  rainbow.rs  solid.rs
