[package]
name = "led-orchestra-ctl"
version = "0.1.0"
edition = "2021"
description = "CLI controller for the LED Orchestra distributed light show"
license = "MIT OR Apache-2.0"

[[bin]]
name = "loctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
led-orchestra-shared = { path = "../shared" }
