[package]
name = "led-orchestra-firmware"
version = "0.1.0"
edition = "2021"
description = "ESP32-C3 firmware for one LED Orchestra node"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "1.0", features = ["esp32c3", "unstable"] }
esp-hal-smartled = { version = "0.17", features = ["esp32c3"] }
esp-backtrace = { version = "0.18", features = [
  "esp32c3",
  "panic-handler",
  "println",
  "exception-handler",
] }
esp-println = { version = "0.16", features = ["esp32c3", "log"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
smart-leds = "0.4"
log = "0.4"

led-orchestra-shared = { path = "../shared" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = false
incremental = false

[profile.dev]
# esp-hal is unhappy at opt-level 0; -Os works in both profiles.
opt-level = "s"
debug = true
