[package]
name = "led-orchestra-firmware"
version = "0.1.0"
edition = "2021"
description = "ESP32-C3 firmware for one LED Orchestra node"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.9"
embassy-net = { version = "0.7.1", features = ["dhcpv4", "udp"] }
embassy-time = "0.5"
esp-alloc = { version = "0.9", features = ["esp32c3"] }
esp-hal = { version = "1.0", features = ["esp32c3", "unstable"] }
esp-hal-smartled = { version = "0.17", features = ["esp32c3"] }
esp-backtrace = { version = "0.18", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16", features = ["esp32c3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
esp-radio = { version = "0.17", features = ["esp32c3", "wifi", "log-04", "unstable"] }
esp-rtos = { version = "0.2", features = ["esp32c3", "embassy", "esp-radio", "esp-alloc", "log-04"] }
smart-leds = "0.4"
log = "0.4"
static_cell = "2"

led-orchestra-shared = { path = "../shared" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = false
incremental = false

[profile.dev]
# esp-hal is unhappy at opt-level 0; -Os works in both profiles.
opt-level = "s"
debug = true

[profile.dev.package.esp-radio]
opt-level = 3
