[package]
name = "led-orchestra-firmware"
version = "0.1.0"
edition = "2021"
description = "ESP32-C3/C6 firmware for one LED Orchestra node"
license = "MIT OR Apache-2.0"

[features]
default = ["chip-esp32c3"]
chip-esp32c3 = [
  "esp-alloc/esp32c3",
  "esp-hal/esp32c3",
  "esp-hal-smartled/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-println/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
  "esp-radio/esp32c3",
  "esp-rtos/esp32c3",
]
chip-esp32c6 = [
  "esp-alloc/esp32c6",
  "esp-hal/esp32c6",
  "esp-hal-smartled/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-println/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-radio/esp32c6",
  "esp-rtos/esp32c6",
]

[dependencies]
embassy-executor = "0.9"
embassy-net = { version = "0.7.1", features = ["dhcpv4", "udp"] }
embassy-time = "0.5"
esp-alloc = "0.9"
esp-hal = { version = "1.0", features = ["unstable"] }
esp-hal-smartled = "0.17"
esp-backtrace = { version = "0.18", features = [
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16", features = ["log-04"] }
esp-bootloader-esp-idf = "0.4"
esp-radio = { version = "0.17", features = ["wifi", "coex", "log-04", "unstable"] }
esp-rtos = { version = "0.2", features = ["embassy", "esp-radio", "esp-alloc", "log-04"] }
smart-leds = "0.4"
log = "0.4"
static_cell = "2"

led-orchestra-shared = { path = "../shared" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = false
incremental = false

[profile.dev]
# esp-hal is unhappy at opt-level 0; -Os works in both profiles.
opt-level = "s"
debug = true

[profile.dev.package.esp-radio]
opt-level = 3
